--- a/style.css
+++ b/style.css
@@ -1,58 +1,61 @@
+
 body {
-  font-family: "Roboto";
-  background: rgb(181,219,219);
-background: linear-gradient(0deg, rgba(181,219,219,1) 0%, rgba(247,247,247,1) 100%);
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.header {
-  margin: 40px 0;
-}
-
-
-
-.header__title {
-  margin: 30px 0 10px 0;
-  font-size: 32px;
-  line-height: 1.2;
-  font-family: "Roboto";
-}
-
-.button-link {
-  box-sizing: border-box;
+    font-family: "Roboto";
+    background: rgb(181,219,219);
+    background: linear-gradient(0deg, rgba(181,219,219,1) 0%, rgba(247,247,247,1) 100%);
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  width: 320px;
-  background: #fb9d19;
-  border-radius: 20px;
+  .header {
+    margin: 40px 0;
+  }
 
-  font-size: 14px;
-  line-height: 1.4;
+  .header__title {
+    margin: 30px 0 10px 0;
+    font-size: 32px;
+    line-height: 1.2;
+    font-family: "Roboto";
+  }
+  
+  .button-link {
+    box-sizing: border-box;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 320px;
+    background: #fb9d19;
+    border-radius: 20px;
+  
+    font-size: 14px;
+    line-height: 1.4;
+  
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 auto;
+  }
+  
+  .links {
+    width: 350px;
+    margin-bottom: 40px;
+  }
 
-  color: #ffffff;
-  text-decoration: none;
-  margin: 0 auto;
-}
+  p {
+    text-indent: 25px;
+  }
+  
+  .box {
+    border: 1px solid #245488;
+    padding: 20px;
+    width: 600px;
+  }
 
-
-
-.links {
-  width: 350px;
-  margin-bottom: 40px;
-}
-
-
-
-
-
-
-.footer {
-  margin: 0 0 40px 0;
-}
+  .footer {
+    margin: 0 0 40px 0;
+  }
+  
